--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "npm-run-all build:*",
+    "build:11ty": "eleventy",
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --minify"
   },
-  
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2"
+    "@11ty/eleventy": "^3.1.2",
+    "@tailwindcss/cli": "^4.1.17",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^4.1.17"
   }
 }
