--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.1.17"
   }
