--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:*",
     "build:11ty": "eleventy",
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --minify"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
-    "@tailwindcss/typography": "^0.5.19",
-    "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.1.17"
   }
 }
