--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:*",
     "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
