--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "start": "eleventy --serve",
-    "build": "npm-run-all build:*",
+    "build": "npm-run-all build:11ty build:css",
     "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/output.css --minify"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
