--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:11ty build:css",
     "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/output.css --minify"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --minify"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "tailwindcss": "^4.1.17"
   }
 }
