Add typography plugin to Tailwind CSS setup
Imported @tailwindcss/typography in input.css to enable typography utilities. Updated package.json scripts to separate minified and watch CSS builds for improved workflow.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:11ty build:css",
     "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --watch"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --minify",
+    "watch:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --watch"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
