--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "npm-run-all": "^4.1.5"
+    "@tailwindcss/cli": "^4.0.0-alpha.16",
+    "@tailwindcss/typography": "^0.5.13",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^4.0.0-alpha.16"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
