--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:11ty build:css",
     "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --minify",
-    "watch:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --watch"
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --minify",
+    "watch:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --watch"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "@tailwindcss/cli": "^4.0.0-alpha.16",
-    "@tailwindcss/typography": "^0.5.13",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^4.0.0-alpha.16"
-  },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
+    "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.1.17"
   }
 }
