--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "start": "eleventy --serve",
     "build": "npm-run-all build:11ty build:css",
     "build:11ty": "eleventy",
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --minify",
-    "watch:css": "npx tailwindcss -i ./src/input.css -o ./_site/style.css --watch"
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --minify"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2",
-    "@tailwindcss/typography": "^0.5.19",
+    "@11ty/eleventy": "^2.0.1",
+    "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.13",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.1.17"
   }
