--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "scripts": {
     "start": "eleventy --serve",
-    "build": "npm-run-all build:11ty build:css",
-    "build:11ty": "eleventy",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./_site/style.css --minify"
+    "build": "eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@tailwindcss/cli": "^4.1.17",
-    "@tailwindcss/typography": "^0.5.13",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^4.1.17"
+    "@11ty/eleventy": "^3.1.2"
   }
 }
