--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy build:css",
-    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./_site/styles.css --minify"
+    "build:css": "tailwindcss -i ./src/input.css -o ./_site/style.css --minify",
+    "build": "npm run build:css && eleventy"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
