Update build and dev scripts for Tailwind integration
Switched to 'npm ci' for dependency installation in deploy workflow and clarified build step to include Tailwind CSS. Added 'watch:css' and 'dev' scripts to package.json for improved local development with Tailwind and Eleventy.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
           node-version: "18"
           cache: "npm"
       - name: Install dependencies
-        run: npm install
-      - name: Build your Eleventy site
-        run: npm run build # This runs "eleventy"
+        run: npm ci
+      - name: Build site (Tailwind & Eleventy)
+        run: npm run build # This runs Tailwind CSS build then Eleventy
       - name: Upload the built site
         uses: actions/upload-pages-artifact@v3
         with:
