--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "eleventy --serve",
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/styles/tailwind.css --minify",
-    "watch:css": "npx tailwindcss -i ./src/input.css -o ./src/styles/tailwind.css --watch",
-    "dev": "npm run build:css && start npm run watch:css && eleventy --serve",
-    "build": "npm run build:css && eleventy"
+    "start": "concurrently \"npm:watch:css\" \"eleventy --serve\"",
+    "build:css": "npx tailwindcss -i ./src/assets/styles/input.css -o ./src/assets/styles/tailwind.css --minify",
+    "watch:css": "npx tailwindcss -i ./src/assets/styles/input.css -o ./src/assets/styles/tailwind.css --watch",
+    "dev": "npx rimraf _site && npm run build:css && npm start",
+  "build": "npx rimraf _site && npm run build:css && eleventy"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "tailwindcss": "^3.3.5",
     "@tailwindcss/typography": "^0.5.10",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.0.0",
+    "rimraf": "^5.0.0"
   }
 }
