--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "dchecketts.github.io",
-  "version": "1.0.0",
+  "name": "racing-proto",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "concurrently \"npm:watch:css\" \"eleventy --serve\"",
-    "build:css": "npx tailwindcss -i ./src/assets/styles/input.css -o ./src/assets/styles/tailwind.css --minify",
-    "watch:css": "npx tailwindcss -i ./src/assets/styles/input.css -o ./src/assets/styles/tailwind.css --watch",
-    "dev": "npx rimraf _site && npm run build:css && npm start",
-  "build": "npx rimraf _site && npm run build:css && eleventy"
+    "dev": "vite",
+    "build": "tailwindcss -i ./src/styles/tailwind-input.css -o ./src/styles/tailwind.css && vite build",
+    "dev-tailwind": "concurrently \"vite\" \"tailwindcss -i ./src/styles/tailwind-input.css -o ./src/styles/tailwind.css --watch\"",
+    "tidy": "prettier --write \"./**/*.{js,css,html}\" --ignore-path .gitignore",
+    "tidy-tailwind": "npx tailwindcss -i ./src/styles/tailwind-input.css -o ./dist/output.css --minify"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2",
-    "tailwindcss": "^3.3.5",
-    "@tailwindcss/typography": "^0.5.10",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "concurrently": "^8.0.0",
-    "rimraf": "^5.0.0"
+    "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
+    "glob": "^13.0.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.18"
   }
 }
